--- a/templates/pages/categories/add_category.html
+++ b/templates/pages/categories/add_category.html
@@ -1,26 +1,29 @@
 {% extends 'layouts/base.html'%} {% block content %}
-<h3 class="h3-heading">Add Category</h3>
-<div class="overview">
-    {% for cat in categories %}
-    <div class="chip chip__category">
-        {{cat.category_name}}
-    </div>
-    {% endfor %}
-</div>
-
-<form action="{{ url_for('insert_category') }}" method="POST" class="col s12">
-    <div class="row">
-        <div class="input-field col s12">
-            <input id="category_name" name="category_name" type="text" class="validate" />
-            <label for="category_name">Category Name</label>
+<main>
+    <h3 class="h3-heading">Add Category</h3>
+    <div class="overview">
+        {% for cat in categories %}
+        <div class="chip chip__category">
+            {{cat.category_name}}
         </div>
+        {% endfor %}
     </div>
-    <div class="btn-row">
-        <button class="btn-row-btn btn waves-effect waves-light" type="submit" name="action">
-            Add Category</button>
-        <a class="btn-row-link" href="{{url_for('admin')}}">back to admin</a>
-    </div>
-</form>
+
+    <form action="{{ url_for('insert_category') }}" method="POST" class="col s12">
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="category_name" name="category_name" type="text" class="validate" />
+                <label for="category_name">Category Name</label>
+            </div>
+        </div>
+        <div class="btn-row">
+            <button class="btn-row-btn btn waves-effect waves-light" type="submit" name="action">
+                Add Category</button>
+            <a class="btn-row-link" href="{{url_for('admin')}}">back to admin</a>
+        </div>
+    </form>
+
+</main>
 
 
 {% endblock %}
