--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -4,38 +4,41 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <h3 class="h3-heading">Contact</h3>
+<main>
+    <div class="container">
+        <h3 class="h3-heading">Contact</h3>
 
-    <form id="contact-form">
-    
-        <p class="contact-form-text">
-            Feel free to leave a message with your suggestions, questions or compliments!
-        </p>
-    
-        <input type="hidden" name="contact_number">
-        {% if (session["username"]) %}
-        <label>Username</label>
-        <input type="text" name="user_name" value={{loggedInUser.username}} required>
-        <label>Email</label>
-        <input type="email" name="user_email" value={{loggedInUser.email}} required>
-        {% else %}
-        <label>Name</label>
-        <input type="text" name="user_name" required>
-        <label>Email</label>
-        <input type="email" name="user_email" required>
-        {% endif %}
-        <label>Message</label>
-        <textarea name="message" required></textarea>
-        <input class="btn" type="submit" value="Send">
-    
-    </form>
-    
-    <div id="contact-form-thank-you">
-        <p>Thanks for contacting!</p>
+        <form id="contact-form">
+
+            <p class="contact-form-text">
+                Feel free to leave a message with your suggestions, questions or compliments!
+            </p>
+
+            <input type="hidden" name="contact_number">
+            {% if (session["username"]) %}
+            <label>Username</label>
+            <input type="text" name="user_name" value={{loggedInUser.username}} required>
+            <label>Email</label>
+            <input type="email" name="user_email" value={{loggedInUser.email}} required>
+            {% else %}
+            <label>Name</label>
+            <input type="text" name="user_name" required>
+            <label>Email</label>
+            <input type="email" name="user_email" required>
+            {% endif %}
+            <label>Message</label>
+            <textarea name="message" required></textarea>
+            <input class="btn" type="submit" value="Send">
+
+        </form>
+
+        <div id="contact-form-thank-you">
+            <p>Thanks for contacting!</p>
+        </div>
+
     </div>
-    
-</div>
+</main>
+
 
 {% endblock %}
 {% block javascript %}
