--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -3,11 +3,11 @@
 <script src="https://kit.fontawesome.com/aca8a0f519.js" crossorigin="anonymous"></script>
 {% endblock %}
 {% block hero %}
-<div class="hero-home">
+<section class="hero-home">
     <h1>Great Ideas?</h1>
     <i class="far fa-lightbulb fa-8x hero-home__icon"></i>
     <h2>Is it <span class="bold">really</span> a great idea? Your opinion matters.</h2>
-</div>
+</section>
 {% endblock %}
 {% block content %}
 
