--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -68,7 +68,7 @@
 
     });
   </script>
-  <script type="text/javascript" src="/static/js/app.js"></script>
+  <script src="/static/js/app.js"></script>
   {% block javascript %}
   {% endblock %}
 </body>
