--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -53,7 +53,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script type="text/javascript">
+  <script>
     $(document).ready(function () {
       $('.sidenav').sidenav();
       $('select').formSelect();
