--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -42,5 +42,5 @@
 
 {% endblock %}
 {% block javascript %}
-<script type="text/javascript" src="static/js/email.js"></script>
+<script src="static/js/email.js"></script>
 {% endblock %}
