--- a/templates/pages/users/login.html
+++ b/templates/pages/users/login.html
@@ -2,7 +2,7 @@
 <main>
   <div class="container">
     <div class="content-section">
-      <form method="POST" action="">
+      <form method="POST">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
           <legend class="border-bottom mb-4">Log In</legend>
