Change span into div.

--- a/templates/components/idea_card.html
+++ b/templates/components/idea_card.html
@@ -9,7 +9,7 @@
 
     <!-- "Front side" -->
     <div class="card-content activator">
-        <span class="card-title grey-text text-darken-4">
+        <div class="card-title grey-text text-darken-4">
             <h4 class="activator card-content-title">{{idea.idea_title}}</h4>
             <div class="grid-wrapper">
                 <div class="card-grid-front">
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-        </span>
+        </div>
     </div>
 
     <!-- "Back side" -->
