--- a/templates/components/search_idea_card.html
+++ b/templates/components/search_idea_card.html
@@ -8,7 +8,7 @@
 
     <!-- "Front side" -->
     <div class="card-content activator">
-        <span class="card-title grey-text text-darken-4">
+        <div class="card-title grey-text text-darken-4">
             <h4 class="activator card-content-title">{{idea.idea_title}}</h4>
             <div class="grid-wrapper">
                 <div class="card-grid-front">
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-        </span>
+        </div>
     </div>
 
     <!-- "Back side" -->
