Add missing quotation mark.

--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -148,7 +148,7 @@
                     <p>Date added:</p>
                     <p>{{idea.date_added}}</p>
                 </div>
-                <div class=idea-details__secundary--owner">
+                <div class="idea-details__secundary--owner">
                     <p>Submitted by:</p>
                     <p>{{idea.username}}</p>
                 </div>
