Remove unneccessary type attr..

--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block head %}
-<script type='text/javascript'
+<script
     src='https://platform-api.sharethis.com/js/sharethis.js#property=5e86e668b4e52f001290ee85&product=inline-share-buttons'
     async='async'></script>
 {% endblock %}
