--- a/templates/pages/ideas/ideas.html
+++ b/templates/pages/ideas/ideas.html
@@ -7,7 +7,8 @@
   <a href="{{url_for('idea_details', idea_id=votes._id)}}" class="hero-ideas__card">
     <div class="card">
       <div class="card-image">
-        <img src="{{ url_for('file', filename=votes.image_name) }}" alt="Picture of idea with name: {{idea.image_alt}}">
+        <img src="{{ url_for('file', filename=votes.image_name) }}"
+          alt="Picture of idea with name: {{votes.image_alt}}">
         <span class="card-title">{{votes.idea_title}}</span>
       </div>
       <div class="card-content">
