--- a/templates/pages/categories/edit_category.html
+++ b/templates/pages/categories/edit_category.html
@@ -1,26 +1,29 @@
 {% extends 'layouts/base.html'%} {% block content %}
 <main>
-    <h3 class="h3-heading">Edit Category</h3>
-    <div class="row">
-        <form action="{{ url_for('update_category', category_id=category._id) }}" method="POST" class="col s12">
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="category_name" name="category_name" type="text" class="validate"
-                        value="{{category.category_name}}" />
-                    <label for="category_name">Category Name</label>
+    <div class="container">
+        <h3 class="h3-heading">Edit Category</h3>
+        <div class="row">
+            <form action="{{ url_for('update_category', category_id=category._id) }}" method="POST" class="col s12">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="category_name" name="category_name" type="text" class="validate"
+                            value="{{category.category_name}}" />
+                        <label for="category_name">Category Name</label>
+                    </div>
                 </div>
-            </div>
-            <div class="btn-row">
-                <button class="btn-row-btn btn waves-effect waves-light" type="submit" name="action">
-                    Save Changes
+                <div class="btn-row">
+                    <button class="btn-row-btn btn waves-effect waves-light" type="submit" name="action">
+                        Save Changes
 
-                </button>
-                <a href="{{ url_for('admin') }}" class="btn-row-link waves-effect waves-light btn grey">Cancel
+                    </button>
+                    <a href="{{ url_for('admin') }}" class="btn-row-link waves-effect waves-light btn grey">Cancel
 
-                </a>
-            </div>
-        </form>
+                    </a>
+                </div>
+            </form>
+        </div>
     </div>
+
 </main>
 
 {% endblock %}
