Change btn text hero.

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -16,5 +16,5 @@
 <h5>Help to create better ideas. Vote on the ideas that you like.</h5>
 
 
-<a href="{{url_for('ideas')}}" class="waves-effect waves-light hero-home__btn">vote</a>
+<a href="{{url_for('ideas')}}" class="waves-effect waves-light hero-home__btn">let me help!</a>
 {% endblock %}
