Finish desktop style about page.

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html'%}
 {% block content %}
 <main>
-    <div class="container">
+    <div class="container-about">
         <h3 class="h3-heading">About</h3>
         <p>This is the third milestone project of the fullstack software development course of Code Institute. It is the
             first
