--- a/static/css/override.css
+++ b/static/css/override.css
@@ -985,6 +985,20 @@ h5 {
 
   /* End contact form */
 }
+.container-about {
+  margin-top: 2rem;
+  margin: 0 auto;
+}
+@media (min-width: 992px) {
+  .container-about {
+    max-width: 1280px;
+    width: 40%;
+  }
+  .container-about p {
+    font-size: 1.2rem;
+  }
+}
+
 .alert-box {
   position: fixed;
   top: 0;
