--- a/static/css/scss/_about.scss
+++ b/static/css/scss/_about.scss
@@ -1,1 +1,20 @@
-// Check if this is still necessary
+.container-about {
+
+    margin-top: 2rem;
+    margin: 0 auto;
+
+    @include laptop {
+
+        max-width: 1280px;
+        width: 40%;
+
+        p {
+
+            font-size: 1.2rem;
+        
+        }
+
+    }
+
+}
+
