--- a/static/css/scss/_contact.scss
+++ b/static/css/scss/_contact.scss
@@ -56,11 +56,22 @@
 
 }
 
+.container-contact {
 
+    margin-top: 2rem;
+    margin: 0 auto;
+
+    @media screen and (min-width: 1025px) {
+
+        width: 40%;
+    
+    }
+}
 
 @media screen and (min-width: 1025px) {
 
     /* Contact form only for desktop*/
+
     #contact-form {
         font-size: 1.2rem;
         display: -ms-grid;
