--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <main>
-    <div class="container">
+    <div class="container-contact">
         <h3 class="h3-heading">Contact</h3>
 
         <form id="contact-form">
