--- a/static/css/scss/_about.scss
+++ b/static/css/scss/_about.scss
@@ -14,6 +14,16 @@
         
         }
 
+        .first-p {
+
+            margin-top: 2rem;
+        }
+
+        .last-p {
+
+            margin-bottom: 4rem;
+        }
+
     }
 
 }
