--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -3,7 +3,7 @@
 <main>
     <div class="container-about">
         <h3 class="h3-heading">About</h3>
-        <p>This is the third milestone project of the fullstack software development course of Code Institute. It is the
+        <p class="first-p">This is the third milestone project of the fullstack software development course of Code Institute. It is the
             first
             'full stack' project combining a database, a backend and a frontend. The aim is to demonstrate a full
             understanding
@@ -14,7 +14,7 @@
             able to
             use this concept, opens a whole new world of possibilities to create web apps.</p>
 
-        <p>Do you have a question, suggestion or remark? Let me know!</p>
+        <p class="last-p">Do you have a question, suggestion or remark? Let me know!</p>
 
         <a href="{{url_for('contact')}}" class="waves-effect waves-light hero-home__btn">contact</a>
     </div>
