--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -28,7 +28,7 @@
             {% endif %}
             <label>Message</label>
             <textarea name="message" required></textarea>
-            <input class="btn" type="submit" value="Send">
+            <input class="btn contact-btn" type="submit" value="Send">
 
         </form>
 
