--- a/static/css/scss/_nav.scss
+++ b/static/css/scss/_nav.scss
@@ -6,6 +6,12 @@ nav {
     background-color: $mainBlue;
 }
 
+.secundary-nav {
+
+    padding-top: .1rem;
+
+}
+
 // Default nav = mobile
 .primary-nav {
     padding-top: 5rem;
