Fix input and label  width for desktop.

--- a/static/css/scss/_contact.scss
+++ b/static/css/scss/_contact.scss
@@ -31,12 +31,12 @@
         grid-column: 2;
         display: block;
         text-align: start;
-        margin-left: 1rem;
+        // margin-left: 1rem;
     }
 
     input, textarea {
         grid-column: 2;
-        width: 90%;
+        // width: 90%;
         height: 2rem;
         margin: 0.5rem 0;
         justify-self: center;
